examples/neg/lambdas/continuations.effekt
effect Raise(msg: String): Unit
effect Yield(): Unit

def main() = {

  // here we use the region of the main function
  var cont: () => Unit at {main} = fun() { () }

  try {
    try {
      do Yield();
      do Raise("broken");
      ()
    } with Yield {
      // the assignment is not valid since the continuation must not leave
      // the current scope, which is the one of Raise.
      cont = fun() { resume(()) };
      ()
    }
  } with Raise { msg =>
    println("exception " ++ msg ++ ", but we keep on going..."); resume(())
  }

  cont()
}